Correction z-index footer

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -498,6 +498,7 @@
         position: fixed;
         bottom: 0;
         opacity: 0;
+        z-index: 1;
 
         &.bot{ // Ecrase le comportement par défaut des rows de materialize pour conserver le margin à 0
           margin-bottom: inherit;
